message(STATUS "CMAKE_CXX_COMPILER_ID: ${CMAKE_CXX_COMPILER_ID}")

set(SRC_LIST catch.cpp)
add_executable(catch ${SRC_LIST})
find_package(Catch2 REQUIRED)

if(Catch2_FOUND)
       INCLUDE_DIRECTORIES("${CMAKE_MODULE_PATH}/../../../include")
       TARGET_LINK_LIBRARIES(catch "${CMAKE_MODULE_PATH}/../../Catch2d.lib")
       TARGET_LINK_LIBRARIES(catch "${CMAKE_MODULE_PATH}/../../Catch2Maind.lib")
else(Catch2_FOUND)
       MESSAGE(FATAL_ERROR "protobuf library not found")
endif(Catch2_FOUND)

#find_package(Protobuf REQUIRED)
#if(Protobuf_FOUND)
#       INCLUDE_DIRECTORIES(${Protobuf_INCLUDE_DIRS})
#       TARGET_LINK_LIBRARIES(catchDemo ${Protobuf_LIBRARIES})
#else(Protobuf_FOUND)
#       MESSAGE(FATAL_ERROR "protobuf library not found")
#endif(Protobuf_FOUND)
#message(STATUS "${Protobuf_FOUND},${Protobuf_INCLUDE_DIRS},${Protobuf_LIBRARIES}")
