message(STATUS "CMAKE_CXX_COMPILER_ID: ${CMAKE_CXX_COMPILER_ID}")

set(SRC_LIST catch.cpp)
add_executable(catch ${SRC_LIST})
find_package(Catch2 REQUIRED)

message(STATUS ${CMAKE_SYSTEM_NAME})
if(Catch2_FOUND)
    if(MSVC)
       INCLUDE_DIRECTORIES("${CMAKE_MODULE_PATH}/../../../include")
       TARGET_LINK_LIBRARIES(catch "${CMAKE_MODULE_PATH}/../../Catch2d.lib" "${CMAKE_MODULE_PATH}/../../Catch2Maind.lib")
    endif()
    if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
       INCLUDE_DIRECTORIES("/usr/local/include")
       TARGET_LINK_LIBRARIES(catch "/usr/local/lib64/libCatch2.a" "/usr/local/lib64/libCatch2Main.a")
    endif()
else(Catch2_FOUND)
       MESSAGE(FATAL_ERROR "Catch2 library not found")
endif(Catch2_FOUND)

#find_package(Protobuf REQUIRED)
#if(Protobuf_FOUND)
#       INCLUDE_DIRECTORIES(${Protobuf_INCLUDE_DIRS})
#       TARGET_LINK_LIBRARIES(catchDemo ${Protobuf_LIBRARIES})
#else(Protobuf_FOUND)
#       MESSAGE(FATAL_ERROR "protobuf library not found")
#endif(Protobuf_FOUND)
#message(STATUS "${Protobuf_FOUND},${Protobuf_INCLUDE_DIRS},${Protobuf_LIBRARIES}")
